# equelle

./: .gitignore  .gitmodules  CMakeLists.txt  EquelleConfig.cmake.in  EquelleConfigVersion.cmake.in  EquelleDescription.txt  EquelleReference.tex  Equelle_0_1.txt  README.md  README.txt  equelle-mode.el  ideas.txt
backends/: CMakeLists.txt
backends/MPI/: CMakeLists.txt
backends/MPI/include/: ZoltanGrid.hpp
backends/MPI/src/: RuntimeMPI.cpp  SubGridBuilder.cpp  ZoltanGrid.cpp  ZoltanGridMigrator.cpp  mpiutils.cpp
backends/MPI/test/: CMakeLists.txt  standalone.cpp
backends/cuda/: .gitignore  CMakeLists.txt  diffCPUsolver.txt  diffLinearSolver.txt  doxyconfig
backends/cuda/cuda_include/: CollOfIndices.hpp  CollOfIndices_impl.hpp  CollOfScalar.hpp  CollOfVector.hpp  CudaArray.hpp  CudaMatrix.hpp  CusparseManager.hpp  DeviceGrid.hpp  DeviceGrid_impl.hpp  DeviceHelperOps.hpp  EquelleRuntimeCUDA_cuda.hpp  LinearSolver.hpp  SeqOfScalar.hpp  collOfScalar.hpp  cos_soon.hpp  deviceGrid.hpp  device_functions.cuh  equelleTypedefs.hpp  wrapCollOfIndices.hpp  wrapDeviceGrid.hpp  wrapEquelleRuntime.hpp
backends/cuda/include/: DeviceHelperOps.hpp  EquelleRuntimeCUDA.hpp  EquelleRuntimeCUDA_havahol.hpp  EquelleRuntimeCUDA_impl.hpp  equelleTypedefs.hpp
backends/cuda/src/: CusparseManager.cu  EquelleRuntimeCUDA.cpp  EquelleRuntimeCUDA.cu  EquelleRuntimeCUDA_havahol.cpp  collOfIndices.cu  collOfScalar.cu  collOfVector.cu  cudaArray.cu  cudaMatrix.cu  deviceGrid.cpp  deviceGrid.cu  deviceHelperOps.cpp  linearSolver.cu  seqOfScalar.cpp  wrapCollOfIndices.cu  wrapDeviceGrid.cu  wrapEquelleRuntime.cu
backends/cuda/test/: .gitignore  arithmetics_CoS.cpp  arithmetics_CoS.cu  arithmetics_CoS.h  autoDiff.cpp  autoDiff.h  autoDiff.param  coll.cpp  coll.cu  coll.h  gridTest.cpp  gridTest.cu  gridTest.h  gridTest.param  matrix.cpp  unstructured.cpp  unstructured.cu  unstructured.h  unstructured_.param  valsOnGrid.cpp  valsOnGrid.cu  valsOnGrid.h  valsOnGrid.param  valsOnGrid_a.mat  valsOnGrid_boundCellVals.mat  valsOnGrid_faces.mat  valsOnGrid_ind.mat  valsOnGrid_intCell.mat  valsOnGrid_intFace.mat  valsOnGrid_subset.mat  valsOnGrid_subsetVals.mat  vectors.cpp  vectors.cu  vectors.h
backends/serial/: CMakeLists.txt
backends/serial/include/: EquelleRuntimeCPU.hpp  EquelleRuntimeCPU_impl.hpp
backends/serial/src/: CartesianGrid.cpp  EquelleRuntimeCPU.cpp
compiler/: ASTNodes.hpp  ASTRewriter.cpp  ASTRewriter.hpp  ASTVisitorInterface.hpp  CMakeLists.txt  CheckASTVisitor.cpp  CheckASTVisitor.hpp  CommandLineOptions.hpp  Common.cpp  Dimension.hpp  EquelleType.cpp  EquelleType.hpp  EquelleUnits.hpp  FileLocation.hpp  Makefile  NodeInterface.hpp  ParseActions.cpp  ParseActions.hpp  PrintASTVisitor.cpp  PrintASTVisitor.hpp  PrintCPUBackendASTVisitor.cpp  PrintCPUBackendASTVisitor.hpp  PrintCUDABackendASTVisitor.cpp  PrintCUDABackendASTVisitor.hpp  PrintEquelleASTVisitor.cpp  PrintEquelleASTVisitor.hpp  PrintIOVisitor.cpp  PrintIOVisitor.hpp  PrintMPIBackendASTVisitor.cpp  PrintMPIBackendASTVisitor.hpp  PrintMRSTBackendASTVisitor.cpp  PrintMRSTBackendASTVisitor.hpp  SymbolTable.cpp  SymbolTable.hpp  compiler_types.cpp  compiler_types.h  disable_warnings.h  ec.cpp  equelle_lexer.l  equelle_parser.y  (+10 more)
compiler/msvc11/: eq_compiler.sln
compiler/msvc11/eq_compiler/: eq_compiler.vcxproj  eq_compiler.vcxproj.filters  lex.cpp  yacc.cpp
examples/: .gitignore  1D_heat_implicit.cpp  1D_heat_implicit.equelle  1D_heat_implicit_alt.cpp  1D_heat_implicit_initial.cpp  CMakeLists.txt  README.md  compile_examples.sh  compile_examples_cuda.sh  kalk1.cpp  kalk1.dsl  kalk2.cpp
examples/1D_heat_implicit/: CMakeLists.txt
examples/1D_heat_implicit/app/: OnTest1.cpp  alt_4.cpp  alt_5.cpp  alt_6.cpp  alt_A.cpp
examples/1D_heat_implicit/dsl/: alt_2.equelle  alt_3.equelle  alt_4.equelle  alt_A.equelle  basic_constructs.equelle  sw.equelle  twophase.equelle
examples/1D_heat_implicit/src/: EquelleRuntimeCPU.cpp
examples/app/: bdyfaces.cpp  heateq.cpp  heateq_timesteps.cpp  onFirstTest.cpp  out_compr_singlephase.cpp  out_context.cpp  out_exp_heateq.cpp  out_heateq.cpp  out_heateq_new.cpp  out_heateq_timesteps.cpp  out_scopetest.cpp  out_scopetests.cpp  out_simpleheateq.cpp  out_sw.cpp  out_swe.cpp  out_test_normals_dot.cpp  out_testops.cpp  out_twophase.cpp  out_twophase_fully_implicit.cpp  out_twophase_fully_implicit_conservation.cpp  out_twophase_grav.cpp  simpleheateq.cpp  smallCalc.cpp  sort_simultaneous.cpp  swe.cpp
examples/benchmarks/: CMakeLists.txt
examples/cuda_include/: EquelleRuntimeCUDA_cuda.hpp
examples/dsl/: compr_singlephase.equelle  context.equelle  exp_heateq.equelle  heateq.equelle  heateq_new.equelle  heateq_timesteps.equelle  scopetests.equelle  simpleheateq.equelle  sw.equelle  swe.equelle  swe_units.equelle  test_normals_dot.equelle  testops.equelle  twophase.equelle  twophase_fully_implicit.equelle  twophase_fully_implicit_conservation.equelle  twophase_grav.equelle
examples/havahol/: CMakeLists.txt  exp_heateq.equelle  gridTest.equelle  onFirstTest.equelle  smallCalc.equelle  swe.equelle
examples/heat_implicit/: CMakeLists.txt  README.txt
examples/iPython_demos/: .gitignore  1D_heat_explicit.ipynb  1D_heat_implicit.ipynb  2D_heat_explicit.ipynb  2D_heat_implicit_flux_version.ipynb  2D_heat_implicit_trimesh.ipynb  2D_sw_explicit.ipynb  heateq.ipynb
examples/include/: EquelleRuntimeCPU.hpp  EquelleRuntimeCPU_impl.hpp  EquelleRuntimeCUDA.hpp  EquelleRuntimeCUDA_havahol.hpp  EquelleRuntimeCUDA_impl.hpp  EquelleRuntimeDune.hpp  EquelleRuntimeDune_impl.hpp
examples/simple_calculations/: kalk1.cpp  kalk2.dsl  kalkfeil.dsl
examples/simulators/: .gitignore
examples/src/: EquelleRuntimeCPU.cpp  EquelleRuntimeCUDA.cpp  EquelleRuntimeCUDA.cu  EquelleRuntimeCUDA_havahol.cpp  EquelleRuntimeDune.cpp
experimental/cartesian/: CMakeLists.txt  cartesian_sample.equelle
tools/: CMakeLists.txt
tools/equellecontroller/: CMakeLists.txt  readme.md
tools/runequelle/: CMakeLists.txt  CMakeLists.txt.in  ebs.py  ebs.py.in
tools/standalonepartition/: CMakeLists.txt  standalonepartition.cpp
(+326 files in other folders)
